# rock_paper_scissors

./: pyproject.toml
src/: rock_paper_scissors.py  test_game.py
src_actions/: actions.py  game.py  game_state.py  rock_paper_scissors.py  test_game.py
