[tool.poetry]
name = "rock_paper_scissors"
version = "0.1.0"
description = ""
authors = ["James Ross <james.i.ross5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
